--- a/timeout_sub_analysis/timeout_sub analysis.qmd
+++ b/timeout_sub_analysis/timeout_sub analysis.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Adjusting the Data (Copy)"
+title: "timeout_sub_analysis"
 format: html
 editor: visual
 ---
@@ -135,80 +135,3 @@ result <- optim(par = c(.5,.5,.5), # equally likely to be boy girl or neutral
 result
 
 ```
-
-```{r, warning=FALSE}
-loglik <- function(x, a.abias, a.obias, na.abias, na.obias)
-{ # x is a vector containing the parameter values
-  ps.obias = x[1]  # the first entry of x
-  ps.abias = x[2] # the second entry of x
-  
-  loglik = a.abias*log(ps.abias)+na.abias*log(1-ps.abias) + 
-    a.obias*log(ps.obias) + na.obias*log(1-ps.obias)
-  return(-loglik) # optim is a minimization function (so need to give is negative log likelihood)
-}
-
-adjusted_data2 <- adjusted_data %>%
-  mutate(prev_point_scored = case_when(
-    prev_point_scored == "error" ~ "other",
-    TRUE ~ prev_point_scored
-  ))
-
-a <- optim(par = c(.5,.5), 
-      loglik, a.abias = sum((adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "ace"))$n),
-      na.abias =sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "ace"))$n),
-      a.obias = sum((adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "other"))$n), na.obias = sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "other"))$n),
-      method="BFGS")
-
-a
-
-```
-
-```{r, warning=FALSE}
-loglik <- function(x, e.ebias, e.obias, ne.ebias, ne.obias)
-{ # x is a vector containing the parameter values
-  ps.obias = x[1]  # the first entry of x
-  ps.ebias = x[2] # the second entry of x
-  
-  loglik = e.ebias*log(ps.ebias)+ne.ebias*log(1-ps.ebias) + 
-    e.obias*log(ps.obias) + ne.obias*log(1-ps.obias)
-  return(-loglik) # optim is a minimization function (so need to give is negative log likelihood)
-}
-
-adjusted_data2 <- adjusted_data %>%
-  mutate(prev_point_scored = case_when(
-    prev_point_scored == "ace" ~ "other",
-    TRUE ~ prev_point_scored
-  ))
-
-e <- optim(par = c(.5, .5), 
-      loglik, e.ebias = sum((adjusted_data %>% filter(point_scored == "error" & prev_point_scored == "error"))$n),
-      ne.ebias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "error"))$n),
-      e.obias = sum((adjusted_data %>% filter(point_scored == "error" & prev_point_scored == "other"))$n),
-      ne.obias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "other"))$n),
-      method="BFGS")
-
-e
-```
-```{r}
-# Define the log-likelihood function for the independent model
-loglik_independent <- function(x, ace_abias, not_ace_abias) {
-  ps_ace = x[1]  # Probability of an ace event
-  loglik = ace_abias * log(ps_ace) + not_ace_abias * log(1 - ps_ace)
-  return(-loglik)  # Return negative log-likelihood for optimization
-}
-
-# Fit the independent model using optim
-independent_model <- optim(par = 0.5,  # Initial guess for the probability of an ace event
-                            loglik_independent,
-                            ace_abias = sum((adjusted_data %>% filter(point_scored == "ace"))$n),
-                            not_ace_abias = sum((adjusted_data %>% filter(point_scored != "ace"))$n),
-                            method = "BFGS")
-
-# Calculate the log-likelihood for the independent model
-loglik_independent_model <- -independent_model$value
-
-# Print the result
-cat("Log-likelihood for the independent model:", loglik_independent_model, "\n")
-
-```
-
