--- a/Final_Analysis_Rmds/Final_hypothesis_testing.qmd
+++ b/Final_Analysis_Rmds/Final_hypothesis_testing.qmd
@@ -4,8 +4,9 @@ format: html
 editor: visual
 ---
 
-Ho: Ace and other only in the model create a better model than full
-Ha: Having an error term improves the model  
+(Run Final_data_adjusting.qmd first to get the models loaded in the environment)
+
+Ho: Ace and other only in the model create a better model than full Ha: Having an error term improves the model
 
 ```{r}
 # Log-likelihood for Model 1 (Three parameters: ace, error, other)
@@ -37,8 +38,7 @@ cat("p-value:", p_value, "\n")
 
 ```
 
-Ho: Looking only at error or other creates the better model 
-Ha: Having an ace term improves the model 
+Ho: Looking only at error or other creates the better model Ha: Having an ace term improves the model
 
 ```{r}
 # Log-likelihood for full model
@@ -69,8 +69,7 @@ cat("p-value (Model 2 vs. Model 3):", p_value_2_3, "\n")
 
 ```
 
-Null Hypothesis (Ho): Ace Model and error model are both equally good models.
-Alternative Hypothesis (Ha): Error Model is better than the Ace Model.
+Null Hypothesis (Ho): Ace Model and error model are both equally good models. Alternative Hypothesis (Ha): Error Model is better than the Ace Model.
 
 ```{r}
 # Calculate log likelihood for Ace Model (Model 2)
@@ -101,4 +100,35 @@ if (p_value < 0.05) {
 }
 
 ```
+Ho: the independent model is sufficient
 
+Ha: the full model is significantly better than the independent model
+
+```{r}
+# Log-likelihood for the full model (Model 1)
+loglik_full_model <- -result$value  # Negate the result since your function returns negative log-likelihood
+
+# Log-likelihood for the independent model
+loglik_independent_model <- -independent_model$value  # Negate the result since your function returns negative log-likelihood
+
+# Degrees of freedom difference (difference in the number of parameters)
+df_difference <- 1  # Independent model has 1 parameter (probability of an ace event)
+
+# Likelihood ratio test statistic
+LR_statistic <- 2 * (loglik_full_model - loglik_independent_model)
+
+# p-value
+p_value <- pchisq(LR_statistic, df_difference, lower.tail = FALSE)
+
+# Print the results
+cat("Likelihood Ratio Test Statistic (Full Model vs. Independent Model):", LR_statistic, "\n")
+cat("Degrees of Freedom Difference:", df_difference, "\n")
+cat("p-value:", p_value, "\n")
+
+# Conclusion
+if (p_value < 0.05) {
+  cat("Reject the null hypothesis. The full model is significantly better than the independent model.\n")
+} else {
+  cat("Fail to reject the null hypothesis. The independent model is sufficient.\n")
+}
+```
