--- a/timeout_sub_analysis/timeout_sub analysis.qmd
+++ b/timeout_sub_analysis/timeout_sub analysis.qmd
@@ -18,23 +18,27 @@ perSet <- read.csv("data/per_set_statsNew.csv")
 
 ```{r}
 # Create new columns ace, error, and kill
-newPlayByPlay <- playByPlay %>%
+newPlayByPlay_subs <- playByPlay %>%
   mutate(ace = grepl("ace", play_descripton, ignore.case = TRUE),
          error = grepl("error", play_descripton, ignore.case = TRUE),
-         kill = grepl("kill", play_descripton, ignore.case = TRUE))
-newPlayByPlay <- newPlayByPlay %>% 
-  filter(ace == TRUE | error == TRUE | kill == TRUE)
+         kill = grepl("kill", play_descripton, ignore.case = TRUE), 
+         sub = grepl("subs", play_descripton, ignore.case = TRUE), 
+         timeout = grepl("Timeout", play_descripton, ignore.case = TRUE))
+newPlayByPlay_subs <- newPlayByPlay_subs %>% 
+  filter(sub == TRUE | timeout == TRUE |ace == TRUE | error == TRUE | kill == TRUE)
 
 # Convert 'ace', 'error', and 'kill' columns to binary indicators (1 if true, 0 if false)
-newPlayByPlay$ace_indicator <- as.numeric(newPlayByPlay$ace)
-newPlayByPlay$error_indicator <- as.numeric(newPlayByPlay$error)
-newPlayByPlay$kill_indicator <- as.numeric(newPlayByPlay$kill)
+newPlayByPlay_subs$ace_indicator <- as.numeric(newPlayByPlay_subs$ace)
+newPlayByPlay_subs$error_indicator <- as.numeric(newPlayByPlay_subs$error)
+newPlayByPlay_subs$kill_indicator <- as.numeric(newPlayByPlay_subs$kill)
+newPlayByPlay_subs$sub_indicator <- as.numeric(newPlayByPlay_subs$sub)
+newPlayByPlay_subs$timeout_indicator <- as.numeric(newPlayByPlay_subs$timeout)
 
 ```
 
 ```{r}
 # Add new columns to the existing data
-newPlayByPlay <- newPlayByPlay %>%
+newPlayByPlay_subs <- newPlayByPlay_subs %>%
   arrange(set, Date, Site) %>%  # Sort the data for correct order
   group_by(set, Date, Site) %>%
   mutate(
@@ -53,20 +57,22 @@ newPlayByPlay <- newPlayByPlay %>%
 ```
 
 ```{r}
-newPlayByPlay <- newPlayByPlay %>%
+newPlayByPlay_subs <- newPlayByPlay_subs %>%
   mutate(point_scored = case_when(
      ace_indicator == 1 ~ 'ace',
      error_indicator == 1 ~ 'error',
-     kill_indicator == 1  ~ 'other'
+     kill_indicator == 1  ~ 'other',
+     sub_indicator == 1 ~ 'sub', 
+     timeout_indicator == 1 ~ 'timeout'
     )
   )
 
-newPlayByPlay <- newPlayByPlay %>%
+newPlayByPlay_subs <- newPlayByPlay_subs %>%
   mutate(prev_point_scored = lag(point_scored, default = "other"))
 ```
 
 ```{r}
-adjusted_data <- newPlayByPlay %>% 
+adjusted_data <- newPlayByPlay_subs %>% 
   select(point_scored, prev_point_scored, set, Date, Site, point_scored_by)
 ```
 
@@ -90,14 +96,14 @@ adjusted_data <- adjusted_data %>%
 ```
 
 ```{r, warning=FALSE}
-loglik <- function(x, a.abias, na.abias, a.ebias, na.ebias, a.obias, na.obias, e.abias, ne.abias, e.ebias, ne.ebias, e.obias, ne.obias, o.abias, no.abias, o.ebias, no.ebias, o.obias, no.obias)
+loglik <- function(x, a.abias, na.abias, a.ebias, na.ebias, a.obias, na.obias, e.abias, ne.abias, e.ebias, ne.ebias, e.obias, ne.obias, o.abias, no.abias, o.ebias, no.ebias, o.obias, no.obias, a.sbias, na.sbias, e.sbias, ne.sbias, o.sbias, no.sbias, a.tbias, na.tbias, e.tbias, ne.tbias, o.tbias, no.tbias) 
 { # x is a vector containing the parameter values
   ps.obias = x[1]  # pb.n is the first entry of x
   ps.abias = x[2] # pb.bbias is the second entry of x
   ps.ebias = x[3] # pb.gbias is the third entry of x'
   
   loglik = a.abias*log(ps.abias)+na.abias*log(1-ps.abias) + 
-    e.abias*log(ps.abias) + ne.abias*log(1-ps.abias) + 
+    e.abias*log(ps.abias) + ne.abias*log(1-ps.abias) +  
     o.abias*log(ps.abias) + no.abias*log(1-ps.abias) + 
     a.ebias*log(ps.ebias)+na.ebias*log(1-ps.ebias) + 
     e.ebias*log(ps.ebias) + ne.ebias*log(1-ps.ebias) + 
@@ -109,7 +115,7 @@ loglik <- function(x, a.abias, na.abias, a.ebias, na.ebias, a.obias, na.obias, e
   return(-loglik) # optim is a minimization function (so need to give is negative log likelihood)
 }
 
-result <- optim(par = c(.5,.5,.5), # equally likely to be boy girl or neutral
+result_full_with_timeout_and_sub <- optim(par = c(.5,.5,.5), # equally likely to be boy girl or neutral
       loglik,
       a.abias = sum((adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "ace"))$n),
       na.abias = sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "ace"))$n),
@@ -129,9 +135,21 @@ result <- optim(par = c(.5,.5,.5), # equally likely to be boy girl or neutral
       ne.obias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "other"))$n),
       o.obias = sum((adjusted_data %>% filter(point_scored == "other" & prev_point_scored == "other"))$n),
       no.obias = sum((adjusted_data %>% filter(point_scored != "other" & prev_point_scored == "other"))$n),
-      method="BFGS")
+      a.sbias = sum((adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "sub"))$n),
+      na.sbias = sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "sub"))$n),
+      e.sbias = sum((adjusted_data %>% filter(point_scored == "error" & prev_point_scored == "sub"))$n),
+      ne.sbias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "sub"))$n),
+      o.sbias = sum((adjusted_data %>% filter(point_scored == "other" & prev_point_scored == "sub"))$n),
+      no.sbias = sum((adjusted_data %>% filter(point_scored != "other" & prev_point_scored == "sub"))$n),
+      a.tbias = sum((adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "timeout"))$n),
+      na.tbias = sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "timeout"))$n),
+      e.tbias = sum((adjusted_data %>% filter(point_scored == "error" & prev_point_scored == "timeout"))$n),
+      ne.tbias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "timeout"))$n),
+      o.tbias = sum((adjusted_data %>% filter(point_scored == "other" & prev_point_scored == "timeout"))$n),
+      no.tbias = sum((adjusted_data %>% filter(point_scored != "other" & prev_point_scored == "timeout"))$n), method="BFGS")
+      
 
 
-result
+result_full_with_timeout_and_sub
 
 ```
