--- a/timeout_sub_analysis/timeout.qmd
+++ b/timeout_sub_analysis/timeout.qmd
@@ -59,7 +59,6 @@ calculate_next_point_probability <- function(playByPlay) {
 
 probability <- calculate_next_point_probability(playByPlay)
 print(paste("Probability of the losing team scoring the next point (without a timeout):", probability))
-
 ```
 
 ```{r}
@@ -156,33 +155,42 @@ print(paste("Probability of the losing team scoring one point after last timeout
 ```
 
 ```{r}
-library(dplyr)
+playByPlay <- read.csv("data/play_by_playFINAL3.csv")
+playByPlay <- playByPlay %>% group_by(url, set)
 
-calculate_win_probability <- function(playByPlay) {
-  timeout <- playByPlay %>%
-    mutate(
-      timeout = grepl("Timeout", play_descripton, ignore.case = TRUE), 
-      prev_home_score = lag(home_team_score, default = first(home_team_score)),
-      prev_visiting_score = lag(visiting_team_score, default = first(visiting_team_score)),
-      next_home_score = lead(home_team_score, default = last(home_team_score)),
-      next_visiting_score = lead(visiting_team_score, default = last(visiting_team_score)),
-      losing_team = ifelse(prev_home_score < prev_visiting_score, "home", "visiting"),
-      losing_team_next_score = ifelse(losing_team == "home", next_home_score, next_visiting_score),
-      losing_team_wins = ifelse(losing_team_next_score > ifelse(losing_team == "home", last(visiting_team_score), last(home_team_score)), TRUE, FALSE)
-    )
-  
-  last_timeout <- timeout %>% filter(timeout == TRUE) %>% slice(n())
-  total_timeout <- tally(last_timeout)
-  
-  losing_team_wins_after_last_timeout <- sum(last_timeout$losing_team_wins, na.rm = TRUE)
-  total_timeouts <- sum(total_timeout == TRUE, na.rm = TRUE)
+playByPlay <- playByPlay %>%
+  mutate(
+    timeout = grepl("Timeout", play_descripton, ignore.case = TRUE),
+    prev_home_score = lag(home_team_score, default = first(home_team_score)),
+    prev_visiting_score = lag(visiting_team_score, default = first(visiting_team_score)),
+    next_home_score = lead(home_team_score, default = last(home_team_score)),
+    next_visiting_score = lead(visiting_team_score, default = last(visiting_team_score)),
+    losing_team = ifelse(prev_home_score < prev_visiting_score, "home", "visiting"),
+    losing_team_next_score = ifelse(losing_team == "home", next_home_score, next_visiting_score),
+    set_winner = ifelse(last(home_team_score) > last(visiting_team_score), "home", "visiting")
+  )
+timeout <- playByPlay %>% filter(timeout == TRUE) 
 
-  probability <- losing_team_wins_after_last_timeout / total_timeouts
+calculate_set_win_probability <- function(playByPlay) {
+  last_timeout <- timeout %>%
+    group_by(url, set) %>%
+    slice_tail(n=1)
+  
+  # get the winner of the set and for every url set get winner and join with last_timeout
+  # then count up wins/ total
+  
+  losing_team_wins_set_after_last_timeout <- sum(last_timeout$losing_team_wins, na.rm = TRUE)
+  total_timeouts <- sum(last_timeout$timeout, na.rm = TRUE)
+  
+  probability <- losing_team_wins_set_after_last_timeout / total_timeouts
   
   return(probability)
 }
+probability <- calculate_set_win_probability(playByPlay)
+print(paste("Probability of the losing team winning the entire set after the last timeout:", probability))
 
-probability <- calculate_win_probability(playByPlay)
-print(paste("Probability of the losing team winning after the last timeout of the set:", probability))
 ```
+7% chance of losing team before last timeout winning set.
+
+
 
