--- a/timeout_sub_analysis/timeout.qmd
+++ b/timeout_sub_analysis/timeout.qmd
@@ -167,8 +167,13 @@ playByPlay <- playByPlay %>%
     next_visiting_score = lead(visiting_team_score, default = last(visiting_team_score)),
     losing_team = ifelse(prev_home_score < prev_visiting_score, "home", "visiting"),
     losing_team_next_score = ifelse(losing_team == "home", next_home_score, next_visiting_score),
-    set_winner = ifelse(last(home_team_score) > last(visiting_team_score), "home", "visiting")
+    set_winner = ifelse(last(home_team_score) > last(visiting_team_score), "home", "visiting"),
+    losing_team_wins = ifelse(
+      (losing_team == "home" & last(home_team_score) > last(visiting_team_score)) |
+      (losing_team == "visiting" & last(visiting_team_score) > last(home_team_score)),
+      TRUE, FALSE)
   )
+  
 timeout <- playByPlay %>% filter(timeout == TRUE) 
 
 calculate_set_win_probability <- function(playByPlay) {
@@ -188,7 +193,6 @@ calculate_set_win_probability <- function(playByPlay) {
 }
 probability <- calculate_set_win_probability(playByPlay)
 print(paste("Probability of the losing team winning the entire set after the last timeout:", probability))
-
 ```
 7% chance of losing team before last timeout winning set.
 
